action: github-commands support (first part)

--- a/.github/workflows/opentelemetry.yml
+++ b/.github/workflows/opentelemetry.yml
@@ -2,7 +2,7 @@ name: OpenTelemetry Export Trace
 
 on:
   workflow_run:
-    workflows: [Edge, Test, Lint, Snapshoty, release, TAV, updatecli]
+    workflows: [Edge, Test, Lint, Snapshoty, release, TAV, tav-command, updatecli]
     types: [completed]
 
 jobs:
