feat: update @opentelemetry/api dep to 1.4.x for OpenTelemetry Bridge
- Bump the dep.
- Update examples/opentelemetry-bridge/ and get dependabot to handle this in
  the future.
- Add an OTel section to the supported-technologies page.
- Add TAV testing of supported @opentelemetry/api versions.
- Add a test for the added `otel.trace.getActiveSpan()` in v1.2.0 of the API.
  This is implemented in the API, so no need for *implementation* changes.

Supersedes: #3211

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,11 @@ updates:
     open-pull-requests-limit: 5
     reviewers:
       - "elastic/apm-agent-node-js"
+
+  - package-ecosystem: "npm"
+    directory: "/examples/opentelemetry-bridge"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 5
+    reviewers:
+      - "elastic/apm-agent-node-js"
