--- a/.github/workflows/tav.yml
+++ b/.github/workflows/tav.yml
@@ -40,6 +40,7 @@ jobs:
           - '@elastic/elasticsearch-canary'
           - '@hapi/hapi'
           - '@koa/router'
+          - '@opentelemetry/api'
           - apollo-server-express
           - aws-sdk
           - bluebird
