--- a/.github/workflows/tav.yml
+++ b/.github/workflows/tav.yml
@@ -20,58 +20,29 @@ permissions:
   contents: read
 
 jobs:
+  prepare-matrix:
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    outputs:
+      versions: ${{ steps.generate-matrix.outputs.versions }}
+      modules: ${{ steps.generate-matrix.outputs.modules }}
+    steps:
+    - uses: actions/checkout@v3
+    ## TODO: use elastic/apm-pipeline-library/.github/actions/version-framework
+    ##       as soon as https://github.com/elastic/apm-pipeline-library/issues/2171 is done.
+    - id: generate-matrix
+      run: .ci/generate-github-tav-matrix.sh
+
   test-tav:
+    needs: prepare-matrix
     runs-on: ubuntu-latest
     timeout-minutes: 40
     strategy:
       max-parallel: 30
       fail-fast: false
       matrix:
-        node:
-          - "19"
-          - "18"
-          - "16"
-          - "14"
-          - "12"
-          - "10"
-          - "8"
-        module:
-          - '@elastic/elasticsearch'
-          - '@elastic/elasticsearch-canary'
-          - '@hapi/hapi'
-          - '@koa/router'
-          - '@opentelemetry/api'
-          - apollo-server-express
-          - aws-sdk
-          - bluebird
-          - cassandra-driver
-          - elasticsearch
-          - express
-          - express-graphql
-          - express-queue
-          - fastify
-          - finalhandler
-          - generic-pool
-          - got
-          - graphql
-          - handlebars
-          - ioredis
-          - knex
-          - koa-router
-          - memcached
-          - mimic-response
-          - mongodb
-          - mongodb-core
-          - mysql
-          - mysql2
-          - next
-          - pg
-          - pug
-          - redis
-          - restify
-          - tedious
-          - undici
-          - ws
+        node: ${{ fromJSON(needs.prepare-matrix.outputs.versions) }}
+        module: ${{ fromJSON(needs.prepare-matrix.outputs.modules) }}
     steps:
       - uses: actions/checkout@v3
       - run: .ci/scripts/test.sh -b "release" -t "${{ matrix.module }}" "${{ matrix.node }}"
