--- a/package.json
+++ b/package.json
@@ -94,7 +94,6 @@
     "basic-auth": "^2.0.1",
     "cookie": "^0.5.0",
     "core-util-is": "^1.0.2",
-    "debug": "^4.1.1",
     "elastic-apm-http-client": "11.3.1",
     "end-of-stream": "^1.4.4",
     "error-callsites": "^2.0.4",
@@ -112,7 +111,7 @@
     "original-url": "^1.2.3",
     "pino": "^6.11.2",
     "relative-microtime": "^2.0.0",
-    "resolve": "^1.22.1",
+    "require-in-the-middle": "^7.0.1",
     "semver": "^6.3.0",
     "set-cookie-serde": "^1.0.0",
     "shallow-clone-shim": "^2.0.0",
