--- a/.github/workflows/tav.yml
+++ b/.github/workflows/tav.yml
@@ -27,6 +27,8 @@ jobs:
       max-parallel: 30
       fail-fast: false
       matrix:
+        # A job matrix limit is 256. Grouping below is to stay under that limit.
+        # https://docs.github.com/en/actions/learn-github-actions/usage-limits-billing-and-administration
         node:
           - "19"
           - "18"
@@ -39,11 +41,10 @@ jobs:
           - '@elastic/elasticsearch'
           - '@elastic/elasticsearch-canary'
           - '@hapi/hapi'
-          - '@koa/router'
           - '@opentelemetry/api'
+          - '@opentelemetry/sdk-metrics'
           - apollo-server-express
           - aws-sdk
-          - bluebird
           - cassandra-driver
           - elasticsearch
           - express
@@ -52,26 +53,25 @@ jobs:
           - fastify
           - finalhandler
           - generic-pool
-          - got
           - graphql
-          - handlebars
           - ioredis
           - knex
-          - koa-router
           - memcached
-          - mimic-response
           - mongodb
           - mongodb-core
           - mysql
           - mysql2
           - next
           - pg
-          - pug
           - redis
           - restify
           - tedious
           - undici
           - ws
+          # Grouped sets.
+          - '@koa/router,koa-router'
+          - handlebars,pug
+          - bluebird,got,mimic-response
     steps:
       - uses: actions/checkout@v3
       - run: .ci/scripts/test.sh -b "release" -t "${{ matrix.module }}" "${{ matrix.node }}"
